deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aman-appweb
  name: aman-appweb
  namespace: aman-final-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aman-appweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aman-appweb
    spec:
      containers:
      - image: aknaruto/amanweb:sec-check12
        name: amanweb
        ports:
        - containerPort: 80
        resources: {}
status: {}
